Tue Dec 08 10:54:27 GMT 2009  Richard Boulton <richard@tartarus.org>

	* xappy/searchconnection.py,xappy/searchresults.py,xappy/utils.py:
	  Move add_to_dict_of_dicts() into utils.py.  Add
	  SearchResultContext, used to bundle up all the resources that a
	  SearchResult object might need.

Tue Dec 08 09:25:54 GMT 2009  Richard Boulton <richard@tartarus.org>

	* xappy/: Split get_significant_digits into separate utility
	  function, in new "utils.py" file.  Refactor SearchResults
	  reordering stuff to use a MSetResultOrdering or
	  ReorderedMSetResultOrdering object to control get_hits and iter:
	  removes the _mset_order member from SearchResults.  Working
	  towards removing the _mset member, too.

Tue Dec 08 00:06:31 GMT 2009  Richard Boulton <richard@tartarus.org>

	* xappy/: Backport licenses from the xappy2 repository at
	  http://code.google.com/p/xappy2/.  Also, some minor tidying up of
	  inline calls to doctest - these are no longer required since the
	  top level test script can be used instead.  Also, fix
	  documentation comment for query.py which had been cut-and-pasted
	  from searchconnection.py.

Mon Dec 07 20:18:51 GMT 2009  Richard Boulton <richard@tartarus.org>

	* xappy/cachemanager/: Split the inverters into separate files, and
	  fallback to inmemory if numpy is not available.  Various other
	  code tidyups.

Mon Dec 07 14:15:03 GMT 2009  Richard Boulton <richard@tartarus.org>

	* xappy/searchconnection.py,xappy/searchresults.py: Split the
	  SearchResults and SearchResult classes out of
	  searchconnection.py, as a first step to making the code a bit
	  more readable.  Also, minimise the number of imported symbols,
	  get rid of the "*" in "from foo import *", and use the proper
	  names of various imports rather than prefixing them with an
	  underscore.

Sat Dec 05 23:50:15 GMT 2009  Richard Boulton <richard@tartarus.org>

	* xappy/doctests/indexerconnection_doctest1.txt: Be less fussy